--- a/NiceAdmin/icons-boxicons.html
+++ b/NiceAdmin/icons-boxicons.html
@@ -3428,52 +3428,52 @@
           <div class="label">bxs-upvote</div>
         </div>
         <div class="icon">
-          <i class="bx bxs-user"></i>
-          <div class="label">bxs-user</div>
+          <i class="bx bxs-appuser"></i>
+          <div class="label">bxs-appuser</div>
         </div>
         <div class="icon">
-          <i class="bx bxs-user-account"></i>
-          <div class="label">bxs-user-account</div>
+          <i class="bx bxs-appuser-account"></i>
+          <div class="label">bxs-appuser-account</div>
         </div>
         <div class="icon">
-          <i class="bx bxs-user-badge"></i>
-          <div class="label">bxs-user-badge</div>
+          <i class="bx bxs-appuser-badge"></i>
+          <div class="label">bxs-appuser-badge</div>
         </div>
         <div class="icon">
-          <i class="bx bxs-user-check"></i>
-          <div class="label">bxs-user-check</div>
+          <i class="bx bxs-appuser-check"></i>
+          <div class="label">bxs-appuser-check</div>
         </div>
         <div class="icon">
-          <i class="bx bxs-user-circle"></i>
-          <div class="label">bxs-user-circle</div>
+          <i class="bx bxs-appuser-circle"></i>
+          <div class="label">bxs-appuser-circle</div>
         </div>
         <div class="icon">
-          <i class="bx bxs-user-detail"></i>
-          <div class="label">bxs-user-detail</div>
+          <i class="bx bxs-appuser-detail"></i>
+          <div class="label">bxs-appuser-detail</div>
         </div>
         <div class="icon">
-          <i class="bx bxs-user-minus"></i>
-          <div class="label">bxs-user-minus</div>
+          <i class="bx bxs-appuser-minus"></i>
+          <div class="label">bxs-appuser-minus</div>
         </div>
         <div class="icon">
-          <i class="bx bxs-user-pin"></i>
-          <div class="label">bxs-user-pin</div>
+          <i class="bx bxs-appuser-pin"></i>
+          <div class="label">bxs-appuser-pin</div>
         </div>
         <div class="icon">
-          <i class="bx bxs-user-plus"></i>
-          <div class="label">bxs-user-plus</div>
+          <i class="bx bxs-appuser-plus"></i>
+          <div class="label">bxs-appuser-plus</div>
         </div>
         <div class="icon">
-          <i class="bx bxs-user-rectangle"></i>
-          <div class="label">bxs-user-rectangle</div>
+          <i class="bx bxs-appuser-rectangle"></i>
+          <div class="label">bxs-appuser-rectangle</div>
         </div>
         <div class="icon">
-          <i class="bx bxs-user-voice"></i>
-          <div class="label">bxs-user-voice</div>
+          <i class="bx bxs-appuser-voice"></i>
+          <div class="label">bxs-appuser-voice</div>
         </div>
         <div class="icon">
-          <i class="bx bxs-user-x"></i>
-          <div class="label">bxs-user-x</div>
+          <i class="bx bxs-appuser-x"></i>
+          <div class="label">bxs-appuser-x</div>
         </div>
         <div class="icon">
           <i class="bx bxs-vector"></i>
@@ -6440,36 +6440,36 @@
           <div class="label">bx-usb</div>
         </div>
         <div class="icon">
-          <i class="bx bx-user"></i>
-          <div class="label">bx-user</div>
+          <i class="bx bx-appuser"></i>
+          <div class="label">bx-appuser</div>
         </div>
         <div class="icon">
-          <i class="bx bx-user-check"></i>
-          <div class="label">bx-user-check</div>
+          <i class="bx bx-appuser-check"></i>
+          <div class="label">bx-appuser-check</div>
         </div>
         <div class="icon">
-          <i class="bx bx-user-circle"></i>
-          <div class="label">bx-user-circle</div>
+          <i class="bx bx-appuser-circle"></i>
+          <div class="label">bx-appuser-circle</div>
         </div>
         <div class="icon">
-          <i class="bx bx-user-minus"></i>
-          <div class="label">bx-user-minus</div>
+          <i class="bx bx-appuser-minus"></i>
+          <div class="label">bx-appuser-minus</div>
         </div>
         <div class="icon">
-          <i class="bx bx-user-pin"></i>
-          <div class="label">bx-user-pin</div>
+          <i class="bx bx-appuser-pin"></i>
+          <div class="label">bx-appuser-pin</div>
         </div>
         <div class="icon">
-          <i class="bx bx-user-plus"></i>
-          <div class="label">bx-user-plus</div>
+          <i class="bx bx-appuser-plus"></i>
+          <div class="label">bx-appuser-plus</div>
         </div>
         <div class="icon">
-          <i class="bx bx-user-voice"></i>
-          <div class="label">bx-user-voice</div>
+          <i class="bx bx-appuser-voice"></i>
+          <div class="label">bx-appuser-voice</div>
         </div>
         <div class="icon">
-          <i class="bx bx-user-x"></i>
-          <div class="label">bx-user-x</div>
+          <i class="bx bx-appuser-x"></i>
+          <div class="label">bx-appuser-x</div>
         </div>
         <div class="icon">
           <i class="bx bx-vector"></i>
