--- a/NiceAdmin/icons-remix.html
+++ b/NiceAdmin/icons-remix.html
@@ -3684,12 +3684,12 @@
           <div class="label">ri-file-upload-line</div>
         </div>
         <div class="icon">
-          <i class="ri-file-user-fill"></i>
-          <div class="label">ri-file-user-fill</div>
+          <i class="ri-file-appuser-fill"></i>
+          <div class="label">ri-file-appuser-fill</div>
         </div>
         <div class="icon">
-          <i class="ri-file-user-line"></i>
-          <div class="label">ri-file-user-line</div>
+          <i class="ri-file-appuser-line"></i>
+          <div class="label">ri-file-appuser-line</div>
         </div>
         <div class="icon">
           <i class="ri-file-warning-fill"></i>
@@ -4120,12 +4120,12 @@
           <div class="label">ri-folder-upload-line</div>
         </div>
         <div class="icon">
-          <i class="ri-folder-user-fill"></i>
-          <div class="label">ri-folder-user-fill</div>
+          <i class="ri-folder-appuser-fill"></i>
+          <div class="label">ri-folder-appuser-fill</div>
         </div>
         <div class="icon">
-          <i class="ri-folder-user-line"></i>
-          <div class="label">ri-folder-user-line</div>
+          <i class="ri-folder-appuser-line"></i>
+          <div class="label">ri-folder-appuser-line</div>
         </div>
         <div class="icon">
           <i class="ri-folder-warning-fill"></i>
@@ -5744,12 +5744,12 @@
           <div class="label">ri-map-pin-time-line</div>
         </div>
         <div class="icon">
-          <i class="ri-map-pin-user-fill"></i>
-          <div class="label">ri-map-pin-user-fill</div>
+          <i class="ri-map-pin-appuser-fill"></i>
+          <div class="label">ri-map-pin-appuser-fill</div>
         </div>
         <div class="icon">
-          <i class="ri-map-pin-user-line"></i>
-          <div class="label">ri-map-pin-user-line</div>
+          <i class="ri-map-pin-appuser-line"></i>
+          <div class="label">ri-map-pin-appuser-line</div>
         </div>
         <div class="icon">
           <i class="ri-mark-pen-fill"></i>
@@ -7736,12 +7736,12 @@
           <div class="label">ri-shield-star-line</div>
         </div>
         <div class="icon">
-          <i class="ri-shield-user-fill"></i>
-          <div class="label">ri-shield-user-fill</div>
+          <i class="ri-shield-appuser-fill"></i>
+          <div class="label">ri-shield-appuser-fill</div>
         </div>
         <div class="icon">
-          <i class="ri-shield-user-line"></i>
-          <div class="label">ri-shield-user-line</div>
+          <i class="ri-shield-appuser-line"></i>
+          <div class="label">ri-shield-appuser-line</div>
         </div>
         <div class="icon">
           <i class="ri-ship-2-fill"></i>
@@ -9048,164 +9048,164 @@
           <div class="label">ri-usb-line</div>
         </div>
         <div class="icon">
-          <i class="ri-user-2-fill"></i>
-          <div class="label">ri-user-2-fill</div>
+          <i class="ri-appuser-2-fill"></i>
+          <div class="label">ri-appuser-2-fill</div>
         </div>
         <div class="icon">
-          <i class="ri-user-2-line"></i>
-          <div class="label">ri-user-2-line</div>
+          <i class="ri-appuser-2-line"></i>
+          <div class="label">ri-appuser-2-line</div>
         </div>
         <div class="icon">
-          <i class="ri-user-3-fill"></i>
-          <div class="label">ri-user-3-fill</div>
+          <i class="ri-appuser-3-fill"></i>
+          <div class="label">ri-appuser-3-fill</div>
         </div>
         <div class="icon">
-          <i class="ri-user-3-line"></i>
-          <div class="label">ri-user-3-line</div>
+          <i class="ri-appuser-3-line"></i>
+          <div class="label">ri-appuser-3-line</div>
         </div>
         <div class="icon">
-          <i class="ri-user-4-fill"></i>
-          <div class="label">ri-user-4-fill</div>
+          <i class="ri-appuser-4-fill"></i>
+          <div class="label">ri-appuser-4-fill</div>
         </div>
         <div class="icon">
-          <i class="ri-user-4-line"></i>
-          <div class="label">ri-user-4-line</div>
+          <i class="ri-appuser-4-line"></i>
+          <div class="label">ri-appuser-4-line</div>
         </div>
         <div class="icon">
-          <i class="ri-user-5-fill"></i>
-          <div class="label">ri-user-5-fill</div>
+          <i class="ri-appuser-5-fill"></i>
+          <div class="label">ri-appuser-5-fill</div>
         </div>
         <div class="icon">
-          <i class="ri-user-5-line"></i>
-          <div class="label">ri-user-5-line</div>
+          <i class="ri-appuser-5-line"></i>
+          <div class="label">ri-appuser-5-line</div>
         </div>
         <div class="icon">
-          <i class="ri-user-6-fill"></i>
-          <div class="label">ri-user-6-fill</div>
+          <i class="ri-appuser-6-fill"></i>
+          <div class="label">ri-appuser-6-fill</div>
         </div>
         <div class="icon">
-          <i class="ri-user-6-line"></i>
-          <div class="label">ri-user-6-line</div>
+          <i class="ri-appuser-6-line"></i>
+          <div class="label">ri-appuser-6-line</div>
         </div>
         <div class="icon">
-          <i class="ri-user-add-fill"></i>
-          <div class="label">ri-user-add-fill</div>
+          <i class="ri-appuser-add-fill"></i>
+          <div class="label">ri-appuser-add-fill</div>
         </div>
         <div class="icon">
-          <i class="ri-user-add-line"></i>
-          <div class="label">ri-user-add-line</div>
+          <i class="ri-appuser-add-line"></i>
+          <div class="label">ri-appuser-add-line</div>
         </div>
         <div class="icon">
-          <i class="ri-user-fill"></i>
-          <div class="label">ri-user-fill</div>
+          <i class="ri-appuser-fill"></i>
+          <div class="label">ri-appuser-fill</div>
         </div>
         <div class="icon">
-          <i class="ri-user-follow-fill"></i>
-          <div class="label">ri-user-follow-fill</div>
+          <i class="ri-appuser-follow-fill"></i>
+          <div class="label">ri-appuser-follow-fill</div>
         </div>
         <div class="icon">
-          <i class="ri-user-follow-line"></i>
-          <div class="label">ri-user-follow-line</div>
+          <i class="ri-appuser-follow-line"></i>
+          <div class="label">ri-appuser-follow-line</div>
         </div>
         <div class="icon">
-          <i class="ri-user-heart-fill"></i>
-          <div class="label">ri-user-heart-fill</div>
+          <i class="ri-appuser-heart-fill"></i>
+          <div class="label">ri-appuser-heart-fill</div>
         </div>
         <div class="icon">
-          <i class="ri-user-heart-line"></i>
-          <div class="label">ri-user-heart-line</div>
+          <i class="ri-appuser-heart-line"></i>
+          <div class="label">ri-appuser-heart-line</div>
         </div>
         <div class="icon">
-          <i class="ri-user-line"></i>
-          <div class="label">ri-user-line</div>
+          <i class="ri-appuser-line"></i>
+          <div class="label">ri-appuser-line</div>
         </div>
         <div class="icon">
-          <i class="ri-user-location-fill"></i>
-          <div class="label">ri-user-location-fill</div>
+          <i class="ri-appuser-location-fill"></i>
+          <div class="label">ri-appuser-location-fill</div>
         </div>
         <div class="icon">
-          <i class="ri-user-location-line"></i>
-          <div class="label">ri-user-location-line</div>
+          <i class="ri-appuser-location-line"></i>
+          <div class="label">ri-appuser-location-line</div>
         </div>
         <div class="icon">
-          <i class="ri-user-received-2-fill"></i>
-          <div class="label">ri-user-received-2-fill</div>
+          <i class="ri-appuser-received-2-fill"></i>
+          <div class="label">ri-appuser-received-2-fill</div>
         </div>
         <div class="icon">
-          <i class="ri-user-received-2-line"></i>
-          <div class="label">ri-user-received-2-line</div>
+          <i class="ri-appuser-received-2-line"></i>
+          <div class="label">ri-appuser-received-2-line</div>
         </div>
         <div class="icon">
-          <i class="ri-user-received-fill"></i>
-          <div class="label">ri-user-received-fill</div>
+          <i class="ri-appuser-received-fill"></i>
+          <div class="label">ri-appuser-received-fill</div>
         </div>
         <div class="icon">
-          <i class="ri-user-received-line"></i>
-          <div class="label">ri-user-received-line</div>
+          <i class="ri-appuser-received-line"></i>
+          <div class="label">ri-appuser-received-line</div>
         </div>
         <div class="icon">
-          <i class="ri-user-search-fill"></i>
-          <div class="label">ri-user-search-fill</div>
+          <i class="ri-appuser-search-fill"></i>
+          <div class="label">ri-appuser-search-fill</div>
         </div>
         <div class="icon">
-          <i class="ri-user-search-line"></i>
-          <div class="label">ri-user-search-line</div>
+          <i class="ri-appuser-search-line"></i>
+          <div class="label">ri-appuser-search-line</div>
         </div>
         <div class="icon">
-          <i class="ri-user-settings-fill"></i>
-          <div class="label">ri-user-settings-fill</div>
+          <i class="ri-appuser-settings-fill"></i>
+          <div class="label">ri-appuser-settings-fill</div>
         </div>
         <div class="icon">
-          <i class="ri-user-settings-line"></i>
-          <div class="label">ri-user-settings-line</div>
+          <i class="ri-appuser-settings-line"></i>
+          <div class="label">ri-appuser-settings-line</div>
         </div>
         <div class="icon">
-          <i class="ri-user-shared-2-fill"></i>
-          <div class="label">ri-user-shared-2-fill</div>
+          <i class="ri-appuser-shared-2-fill"></i>
+          <div class="label">ri-appuser-shared-2-fill</div>
         </div>
         <div class="icon">
-          <i class="ri-user-shared-2-line"></i>
-          <div class="label">ri-user-shared-2-line</div>
+          <i class="ri-appuser-shared-2-line"></i>
+          <div class="label">ri-appuser-shared-2-line</div>
         </div>
         <div class="icon">
-          <i class="ri-user-shared-fill"></i>
-          <div class="label">ri-user-shared-fill</div>
+          <i class="ri-appuser-shared-fill"></i>
+          <div class="label">ri-appuser-shared-fill</div>
         </div>
         <div class="icon">
-          <i class="ri-user-shared-line"></i>
-          <div class="label">ri-user-shared-line</div>
+          <i class="ri-appuser-shared-line"></i>
+          <div class="label">ri-appuser-shared-line</div>
         </div>
         <div class="icon">
-          <i class="ri-user-smile-fill"></i>
-          <div class="label">ri-user-smile-fill</div>
+          <i class="ri-appuser-smile-fill"></i>
+          <div class="label">ri-appuser-smile-fill</div>
         </div>
         <div class="icon">
-          <i class="ri-user-smile-line"></i>
-          <div class="label">ri-user-smile-line</div>
+          <i class="ri-appuser-smile-line"></i>
+          <div class="label">ri-appuser-smile-line</div>
         </div>
         <div class="icon">
-          <i class="ri-user-star-fill"></i>
-          <div class="label">ri-user-star-fill</div>
+          <i class="ri-appuser-star-fill"></i>
+          <div class="label">ri-appuser-star-fill</div>
         </div>
         <div class="icon">
-          <i class="ri-user-star-line"></i>
-          <div class="label">ri-user-star-line</div>
+          <i class="ri-appuser-star-line"></i>
+          <div class="label">ri-appuser-star-line</div>
         </div>
         <div class="icon">
-          <i class="ri-user-unfollow-fill"></i>
-          <div class="label">ri-user-unfollow-fill</div>
+          <i class="ri-appuser-unfollow-fill"></i>
+          <div class="label">ri-appuser-unfollow-fill</div>
         </div>
         <div class="icon">
-          <i class="ri-user-unfollow-line"></i>
-          <div class="label">ri-user-unfollow-line</div>
+          <i class="ri-appuser-unfollow-line"></i>
+          <div class="label">ri-appuser-unfollow-line</div>
         </div>
         <div class="icon">
-          <i class="ri-user-voice-fill"></i>
-          <div class="label">ri-user-voice-fill</div>
+          <i class="ri-appuser-voice-fill"></i>
+          <div class="label">ri-appuser-voice-fill</div>
         </div>
         <div class="icon">
-          <i class="ri-user-voice-line"></i>
-          <div class="label">ri-user-voice-line</div>
+          <i class="ri-appuser-voice-line"></i>
+          <div class="label">ri-appuser-voice-line</div>
         </div>
         <div class="icon">
           <i class="ri-video-add-fill"></i>
